HtmlUi: Fixed cell editor checkbox alignment

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/table/editor/CellEditorPopup.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/table/editor/CellEditorPopup.css
@@ -24,14 +24,14 @@
 }
 
 .check-box-field.cell-editor-form-field {
-  & > .field > label {
+  & > .field {
     /* same padding for left and right, it's by purpose */
     padding-left: @table-cell-padding-left;
     padding-right: @table-cell-padding-left;
     margin: 0;
   }
 
-  & > .field > label::before {
+  & > .field::before {
     position: static;
     margin: 0;
     margin-top: -1px;
